--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<!-- Write your HTML in this file -->
+<!DOCTYPE HTML>
+<html lang="en">
+
+<head>
+    <title>Lab Well Formed HTML Document</title>
+</head>
+
+<body>
+    <h3>List example in Body</h3>
+    <ul>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+    </ul>
+
+</body>
+  
+</html>
+
